Add Google AdSense script to head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/assets/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/{{site.favicon_path}}" type="image/x-icon">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5161648708541668" crossorigin="anonymous"></script>
 {% if site.extra_css %}
     {%- for extra_css in site.extra_css -%}
         {%- assign starts_with = extra_css | slice: 0,4 -%}
